Since there were spacing issues with my Flexbox idea I switched to CSS Grid. Makes more sense indeed.

--- a/src/assets/editor-theme.css
+++ b/src/assets/editor-theme.css
@@ -8,4 +8,5 @@
   --color-editor-text-secondary: #355D28;
   --color-editor-active: #7BCF73;
   --color-editor-canvas: #B8F4A6;
+  --color-editor-sky: #87ceeb;
 }
